--- a/TestSystemJS/Views/Home/Index.cshtml
+++ b/TestSystemJS/Views/Home/Index.cshtml
@@ -16,39 +16,6 @@
         <!-- The application is rendered here -->
     </div>
 
-<script type="text/javascript" charset="utf-8">
-
-    window.define = System.amdDefine;
-    window.require = System.amdRequire;
-
-    System.config({
-        baseURL: 'App',
-
-        map: {
-            text: '../Scripts/text.js',
-            app: 'app.js',
-            main: "main.js",
-            jquery: "../../../Scripts/kendo/2016.2.714/jquery.min"
-        },
-
-        paths: {
-            'kendo.*': "../../../Scripts/kendo/2016.2.714/kendo.*.js"
-        },
-        meta: {
-            // meaning [baseURL]/vendor/angular.js when no other rules are present
-            // path is normalized using map and paths configuration
-            '/Scripts/kendo/2016.2.714/kendo.*.js': {
-                format: 'global', // load this module as a global
-                exports: 'kendo', // the global property to take as the module value
-                deps: [
-                    // dependencies to load before this module
-                    'jquery'
-                ]
-            }
-        }
-    });
-
-    System.import('main');
-</script>
+    <script src="@Url.Content("~/App/config.js")" type="text/javascript"></script>
 </body>
 </html>
