--- a/TestSystemJS/Views/Home/Index.cshtml
+++ b/TestSystemJS/Views/Home/Index.cshtml
@@ -7,6 +7,7 @@
     <title>Test</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    @Styles.Render("~/Content/css")
     <script src="@Url.Content("~/Scripts/modernizr-2.6.2.js")"></script>
     <script src="@Url.Content("~/Scripts/system.js")" type="text/javascript"></script>
 </head>
@@ -16,6 +17,6 @@
         <!-- The application is rendered here -->
     </div>
 
-    <script src="@Url.Content("~/App/config.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/App/config2.js")" type="text/javascript"></script>
 </body>
 </html>
