--- a/TestSystemJS/Views/Home/Index.cshtml
+++ b/TestSystemJS/Views/Home/Index.cshtml
@@ -17,6 +17,6 @@
         <!-- The application is rendered here -->
     </div>
 
-    <script src="@Url.Content("~/App/config2.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/App/config.js")" type="text/javascript"></script>
 </body>
 </html>
