--- a/TestSystemJS/Views/Home/Index.cshtml
+++ b/TestSystemJS/Views/Home/Index.cshtml
@@ -20,7 +20,13 @@
     <!-- This works, we are able to specify the entry point, see line 55 in the file-->
     @*<script src="@Url.Content("~/App/config.js")" type="text/javascript"></script>*@
 
-    <!-- This does not work, I tried to specify the entry point after Site.js is referenced-->
-    <script src="@Url.Content("~/App/startup.js")" type="text/javascript"></script>
+<!-- This does not work, I tried to specify the entry point after Site.js is referenced-->
+<script type="text/javascript">
+ 
+    window.define = System.amdDefine;
+    window.require = System.amdRequire;
+
+</script>
+    <script src="@Url.Content("~/App/Site.js")" type="text/javascript"></script>
 </body>
 </html>
